# BestInClassPPSSE_640

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
Data/SKSE/Plugins/: BestInClassPPSSE.ini
src/Common/: PCH.h
src/Events/: Events.cpp  Events.h
src/Export/: SKSEPlugin.cpp
src/Hooks/: Hooks.cpp  Hooks.h
src/ItemVisitor/: ItemVisitor.cpp  ItemVisitor.h  OriginalVisitor.cpp  OriginalVisitor.h
src/ListInvalidator/: ListInvalidator.cpp  ListInvalidator.h
src/RE/: Misc.h  Offset.h
src/Settings/: INISettings.cpp  INISettings.h
